DES-124 issue on iOS fixed

--- a/ArticleTemplates/assets/scss/modules/external/_element.scss
+++ b/ArticleTemplates/assets/scss/modules/external/_element.scss
@@ -137,6 +137,7 @@ Display an embedded element. Element embeds are typically shown as figures, and 
             width: 100%;
             transition: opacity .25s ease-in-out;
             -webkit-transition: opacity .25s ease-in-out;
+            overflow: hidden;
 
             .youtube-media__touchpoint {
                 width: 100%; 
