--- a/ArticleTemplates/assets/scss/style-sync.css
+++ b/ArticleTemplates/assets/scss/style-sync.css
@@ -2283,7 +2283,8 @@ Display an embedded element. Element embeds are typically shown as figures, and 
       height: 100%;
       width: 100%;
       transition: opacity .25s ease-in-out;
-      -webkit-transition: opacity .25s ease-in-out; }
+      -webkit-transition: opacity .25s ease-in-out;
+      overflow: hidden; }
       .element-placeholder .element__inner .youtube-media__placeholder .youtube-media__touchpoint {
         width: 100%;
         height: 100%;
