--- a/test/unit/test.css
+++ b/test/unit/test.css
@@ -3853,7 +3853,8 @@
         height: 100%;
         width: 100%;
         transition: opacity .25s ease-in-out;
-        -webkit-transition: opacity .25s ease-in-out; }
+        -webkit-transition: opacity .25s ease-in-out;
+        overflow: hidden; }
         #sandbox .element-placeholder .element__inner .youtube-media__placeholder .youtube-media__touchpoint {
           width: 100%;
           height: 100%;
